<resources>
    <string name="app_name">MovApps</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="lewati">LEWATI PERKENALAN</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="now_playing_des">Lebih Mudah untuk Mengetahui\nfilm yang sedang tampil</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="masuk">MASUK AKUN</string>
    <string name="daftar">DAFTAR AKUN BARU</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="greetings">Selamat Datang,\nAditiya Prayogo</string>
    <string name="email">adit.ihzar@gmail.com</string>
    <string name="simpan">SIMPAN DAN LANJUTKAN</string>
    <string name="checkout">Checkout</string>
    <string name="check_failed">Saldo pada e-wallet kamu tidak mencukupi\nuntuk melakukan transaksi</string>
    <string name="simpan_data">Simpan data baru</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film_title">Avengers</string>
</resources>
